@@ -322,3 +322,8 @@ L["Blizzard Class Colors"] = "Blizzard Klassenfarben"
 L["Popup notifications"] = "Popup Benachrichtigungen"
 L["Looking for Group notifications"] = "Suche nach Gruppe Benachrichtigungen"
 L["Misc Frames"] = "Verschiedene Fenster"
+L["Developed by"] = "Entwickelt von"
+L["With Contributions by"] = "Mitgewirkt von"
+L["Localised by"] = "Lokalisiert von"
+L["QA Testing by"] = "QS-Tests von"
+L["Credits"] = "Danksagung"
