@@ -322,3 +322,8 @@ L["Blizzard Class Colors"] = "Colores de Clase de Blizzard"
 L["Popup notifications"] = "Notificaciones emergentes"
 L["Looking for Group notifications"] = "Notificaciones para Buscando grupo"
 L["Misc Frames"] = "Marcos misceláneos"
+L["Developed by"] = true
+L["With Contributions by"] = true
+L["Localised by"] = true
+L["QA Testing by"] = true
+L["Credits"] = true
