@@ -322,3 +322,8 @@ L["Blizzard Class Colors"] = true
 L["Popup notifications"] = true
 L["Looking for Group notifications"] = true
 L["Misc Frames"] = "Divers"
+L["Developed by"] = true
+L["With Contributions by"] = true
+L["Localised by"] = true
+L["QA Testing by"] = true
+L["Credits"] = true
