@@ -322,3 +322,8 @@ L["Blizzard Class Colors"] = "Colori di classe della Blizzard"
 L["Popup notifications"] = "Notifiche Popup"
 L["Looking for Group notifications"] = "Notifiche Ricerca Gruppo"
 L["Misc Frames"] = "Riquadri Vari"
+L["Developed by"] = true
+L["With Contributions by"] = true
+L["Localised by"] = true
+L["QA Testing by"] = true
+L["Credits"] = true
