@@ -324,3 +324,8 @@ L["Blizzard Class Colors"] = true
 L["Popup notifications"] = true
 L["Looking for Group notifications"] = true
 L["Misc Frames"] = "기타 프레임"
+L["Developed by"] = true
+L["With Contributions by"] = true
+L["Localised by"] = true
+L["QA Testing by"] = true
+L["Credits"] = true
