@@ -322,3 +322,8 @@ L["Blizzard Class Colors"] = "Cores de Classe da Blizzard"
 L["Popup notifications"] = "Notificações em Pop-Up"
 L["Looking for Group notifications"] = "Notificações do Localizador de Grupos"
 L["Misc Frames"] = "Diversos"
+L["Developed by"] = true
+L["With Contributions by"] = true
+L["Localised by"] = true
+L["QA Testing by"] = true
+L["Credits"] = true
