@@ -313,12 +313,17 @@ L["Top Right"] = "右上"
 L["Center"] = "中間"
 L["Player frame in target frame style"] = "目標框架樣式的播放器框架"
 L["PvP Indicator"] = "PvP 提示器"
-L["Invert target frame"] = true
-L["Invert focus frame"] = true
+L["Invert target frame"] = "反轉選取目標框架"
+L["Invert focus frame"] = "反轉專注目標框架"
 L["Talking Head"] = "特寫框架"
 L["Skins"] = "美化外觀"
 L["Adjust Skin settings."] = "調整外觀設定."
-L["Blizzard Class Colors"] = true
-L["Popup notifications"] = true
-L["Looking for Group notifications"] = true
+L["Blizzard Class Colors"] = "暴雪預設職業顏色"
+L["Popup notifications"] = "彈出通知"
+L["Looking for Group notifications"] = "隊伍搜尋器通知"
 L["Misc Frames"] = "其他"
+L["Developed by"] = true
+L["With Contributions by"] = true
+L["Localised by"] = true
+L["QA Testing by"] = true
+L["Credits"] = true
